# Orcahand_gesture_correction

./: DATA_COLLECTION_WORKFLOW.md  MUJOCO_OPTIMIZATION_METHOD.md  PAPER_MEMO.md  PAPER_METHOD_DRAFT.md  PROJECT_STATUS.md  README.md  SEQUENCE_RESEARCH_PLAN.md  augment_dataset_with_optimization.py  collect_gesture_dataset.py  evaluate_jitter.py  export_comparison_subset.py  fit_mediapipe_frame.py  generate_classifier_figures.py  generate_pca_sweep.py  mediapipe_teleop.py  merge_gesture_datasets.py  paper_draft.tex  plot_classification_summary.py  pyproject.toml  random_policy.py  requirements-dev.txt  train_svm.py  train_temporal_model.py
.github/workflows/: publish-pypi.yml
figures/: classification_five_metrics_v2.csv  classification_multi.csv  classification_multi_tmp.csv  classification_rf_tmp.csv  classification_v2.csv  jitter_v2.csv
figures/batch_smoke/: classification_batch_smoke.csv  classification_rf.csv  classification_svm.csv
figures/classifier_suite_v2/: classification_knn.csv  classification_mlp.csv  classification_rf.csv  classification_suite_v2.csv  classification_svm.csv
figures/knn_best_pca_comparison/: knn_best_pca_comparison.csv
figures/mlp_best_pca_comparison/: mlp_best_pca_comparison.csv
figures/pca_sweep_v2/: pca_sweep_results.csv  pca_sweep_summary.csv
figures/rf_best_pca_comparison/: rf_best_pca_comparison.csv
figures/svm_best_pca_comparison/: svm_best_pca_comparison.csv
scripts/: smoke_test_env.py
src/orca_sim/: __init__.py  envs.py  gesture_features.py  registry.py  (+2 more)
tests/: test_envs.py  test_registry.py  test_versions.py
(+21 files in other folders)
